--- a/cookbook/x402/facilitator.mdx
+++ b/cookbook/x402/facilitator.mdx
@@ -10,6 +10,7 @@ A facilitator in the x402 protocol is a service that processes payments and prov
 ## Prerequisites
 
 - Node.js 18+
+- pnpm (install via [pnpm.io/installation](https://pnpm.io/installation))
 - A SKALE Chain endpoint
 - A wallet private key for signing settlement transactions
 - Basic knowledge of TypeScript
@@ -26,1066 +27,437 @@ A facilitator service:
 
 ---
 
-## Implementation
+<Tabs>
+  <Tab title = "Coinbase SDK">
 
-### Step 1: Project Setup
+    ## Implementation
 
-Create a new project and install dependencies:
+    ### Step 1: Project Setup
 
-```bash
-mkdir skale-facilitator
-cd skale-facilitator
-npm init -y
-```
+    Create a new project and install dependencies:
 
-Install the required packages:
+    ```bash
+    mkdir skale-facilitator
+    cd skale-facilitator
+    pnpm init
+    ```
 
-```bash
-npm install hono @hono/node-server ethers dotenv
-npm install -D typescript tsx @types/node
-```
+    Install the required packages:
 
-Update your `package.json` scripts:
+    ```bash
+    pnpm add @x402/core @x402/evm dotenv express viem
+    pnpm add -D @types/express @types/node tsx typescript
+    ```
 
-```json
-{
-  "name": "x402-facilitator",
-  "type": "module",
-  "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "start": "tsx src/index.ts"
-  }
-}
-```
+    Update your `package.json`:
 
-### Step 2: Environment Configuration
-
-Create `.env` file in the project roots. Run:
-```shell
-touch .env
-```
-
-Add the variables:
-```bash
-FACILITATOR_SIGNER_PK=your_private_key_here
-PORT=3500
-```
-
-<Warning>
-Never commit your private key to version control. Add `.env` to your `.gitignore` file.
-</Warning>
-
-### Step 3: Project Structure
-
-Create the following folder structure:
-
-```
-src/
-├── index.ts
-├── types.ts
-├── utils.ts
-└── config/
-    ├── networks.ts
-    └── constants.ts
-```
-
-### Step 4: Type Definitions
-
-Create `src/types.ts` with all TypeScript interfaces. Run:
-```shell
-touch src/types.ts
-```
-
-Add the types code:
-```typescript
-export interface PaymentRequirements {
-  scheme: string;
-  network: string;
-  amount?: string;
-  maxAmountRequired?: string;
-  resource?: string;
-  description?: string;
-  mimeType?: string;
-  payTo: string;
-  maxTimeoutSeconds?: number;
-  asset: string;
-  outputSchema?: any;
-  extra?: {
-    name?: string;
-    version?: string;
-  };
-}
-
-export interface VerifyResponse {
-  isValid: boolean;
-  invalidReason?: string;
-  payer?: string;
-}
-
-export interface SettleResponse {
-  success: boolean;
-  transaction: string;
-  txHash: string | null;
-  network: string;
-  networkId: string | null;
-  payer: string;
-  errorReason?: string;
-}
-
-export interface DiscoveryResource {
-  accepts: PaymentRequirements[];
-  lastUpdated: string;
-  metadata: Record<string, any>;
-  resource: string;
-  type: string;
-  x402Version: number;
-}
-
-export interface ListDiscoveryResponse {
-  x402Version: number;
-  items: DiscoveryResource[];
-  pagination?: {
-    limit: number;
-    offset: number;
-    total: number;
-  };
-}
-
-export interface TokenConfig {
-  address: string;
-  name: string;
-  forwarder?: string;
-  forwarderName?: string;
-  forwarderVersion?: string;
-}
-
-export interface NetworkConfig {
-  chainId: number;
-  name: string;
-  defaultRpc: string;
-  tokens: TokenConfig[];
-}
-
-export interface NonceEntry {
-  status: 'pending' | 'confirmed';
-  requestId: string;
-  timestamp: number;
-  txHash?: string;
-  blockNumber?: number;
-}
-```
-
-### Step 5: Network Configuration
-
-Create `src/config/networks.ts` to define supported networks and tokens. Run:
-```shell
-touch src/config/networks.ts
-```
-
-Add the networks cofig code:
-```typescript
-import type { NetworkConfig } from '../types.js';
-
-export const NETWORK_CONFIG: Record<string, NetworkConfig> = {
-  'skale-base-sepolia': {
-    chainId: 324705682,
-    name: 'SKALE Base Sepolia',
-    defaultRpc: 'https://base-sepolia-testnet.skalenodes.com/v1/base-testnet',
-    tokens: [
-      {
-        address: '0x61a26022927096f444994dA1e53F0FD9487EAfcf',
-        name: 'Axios USD',
-        forwarder: '0x61a26022927096f444994dA1e53F0FD9487EAfcf',
-        forwarderName: 'Axios USD',
-        forwarderVersion: '1'
-      },
-      {
-        address: '0x2e08028E3C4c2356572E096d8EF835cD5C6030bD',
-        name: 'Bridged USDC (SKALE Bridge)'
-      },
-      {
-        address: '0x3ca0a49f511c2c89c4dcbbf1731120d8919050bf',
-        name: 'Tether USD',
-        forwarder: '0x3ca0a49f511c2c89c4dcbbf1731120d8919050bf',
-        forwarderName: 'Tether USD',
-        forwarderVersion: '1'
-      },
-      {
-        address: '0x4512eacd4186b025186e1cf6cc0d89497c530e87',
-        name: 'Wrapped BTC',
-        forwarder: '0x4512eacd4186b025186e1cf6cc0d89497c530e87',
-        forwarderName: 'Wrapped BTC',
-        forwarderVersion: '1'
-      },
-      {
-        address: '0xf94056bd7f6965db3757e1b145f200b7346b4fc0',
-        name: 'Wrapped Ether',
-        forwarder: '0xf94056bd7f6965db3757e1b145f200b7346b4fc0',
-        forwarderName: 'Wrapped Ether',
-        forwarderVersion: '1'
-      },
-      {
-        address: '0xaf2e0ff5b5f51553fdb34ce7f04a6c3201cee57b',
-        name: 'Skale Token',
-        forwarder: '0xaf2e0ff5b5f51553fdb34ce7f04a6c3201cee57b',
-        forwarderName: 'Skale Token',
-        forwarderVersion: '1'
-      }
-    ]
-  }
-};
-```
-
-### Step 6: Constants
-
-Create `src/config/constants.ts` with ABI definitions and app metadata. Run:
-```shell
-touch src/config/constants.ts
-```
-
-Add the constants script code:
-```typescript
-export const APP_NAME = 'x402 Facilitator';
-export const APP_VERSION = '1.0.0';
-
-export const TRANSFER_WITH_AUTHORIZATION_ABI = [
-  'function transferWithAuthorization(address from, address to, uint256 value, uint256 validAfter, uint256 validBefore, bytes32 nonce, uint8 v, bytes32 r, bytes32 s) returns (bool)',
-  'function transferWithAuthorization(address from, address to, uint256 value, uint256 validAfter, uint256 validBefore, bytes32 nonce, bytes signature) returns (bool)',
-  'function balanceOf(address account) view returns (uint256)',
-  'function authorizationState(address authorizer, bytes32 nonce) view returns (bool)'
-];
-
-export const EIP712_TYPES = {
-  TransferWithAuthorization: [
-    { name: 'from', type: 'address' },
-    { name: 'to', type: 'address' },
-    { name: 'value', type: 'uint256' },
-    { name: 'validAfter', type: 'uint256' },
-    { name: 'validBefore', type: 'uint256' },
-    { name: 'nonce', type: 'bytes32' }
-  ]
-};
-```
-
-### Step 7: Utility Functions
-
-Create `src/utils.ts` with helper functions. Run:
-```shell
-touch src/utils.ts
-```
-
-Add the utils script code:
-```typescript
-import { NETWORK_CONFIG } from './config/networks.js';
-import type { NetworkConfig, PaymentRequirements, DiscoveryResource } from './types.js';
-
-export function getSellerKey(resource: string): string {
-  const encoded = encodeURIComponent(resource).substring(0, 512);
-  return `seller:${encoded}`;
-}
-
-export function getNetworkConfig(network: string): NetworkConfig | undefined {
-  let config = NETWORK_CONFIG[network];
-  
-  if (!config && network?.startsWith('eip155:')) {
-    const chainId = parseInt(network.split(':')[1]);
-    config = Object.values(NETWORK_CONFIG).find(c => c.chainId === chainId);
-  }
-  
-  return config;
-}
-
-export function getRpcUrl(network: string): string {
-  const networkConfig = getNetworkConfig(network);
-  if (!networkConfig) {
-    throw new Error(`Unsupported network: ${network}`);
-  }
-  return networkConfig.defaultRpc;
-}
-
-export function parseSignature(signature: string): { v: number; r: string; s: string } | null {
-  const sig = signature.startsWith('0x') ? signature.slice(2) : signature;
-  
-  if (sig.length !== 130) {
-    return null;
-  }
-  
-  return {
-    r: '0x' + sig.slice(0, 64),
-    s: '0x' + sig.slice(64, 128),
-    v: parseInt(sig.slice(128, 130), 16)
-  };
-}
-
-export async function registerSeller(
-  paymentRequirements: PaymentRequirements,
-  network: string,
-  requestId: string,
-  sellerStore: Map<string, DiscoveryResource>
-): Promise<void> {
-  if (!paymentRequirements.resource) {
-    console.log(`[${requestId}] No resource URL, skipping seller registration`);
-    return;
-  }
-
-  const sellerKey = getSellerKey(paymentRequirements.resource);
-  
-  try {
-    const existing = sellerStore.get(sellerKey);
-    const now = new Date().toISOString();
-    
-    let discoveryResource: DiscoveryResource;
-    
-    if (existing) {
-      discoveryResource = existing;
-      
-      const lastUpdated = new Date(discoveryResource.lastUpdated);
-      const oneHourAgo = new Date(Date.now() - 3600000);
-      
-      if (lastUpdated > oneHourAgo) {
-        console.log(`[${requestId}] Seller recently updated, skipping`);
-        return;
-      }
-      
-      const reqIndex = discoveryResource.accepts.findIndex(req =>
-        req.payTo.toLowerCase() === paymentRequirements.payTo.toLowerCase() &&
-        req.asset.toLowerCase() === paymentRequirements.asset.toLowerCase() &&
-        req.network === network
-      );
-      
-      if (reqIndex >= 0) {
-        discoveryResource.accepts[reqIndex] = paymentRequirements;
-      } else {
-        discoveryResource.accepts.push(paymentRequirements);
-      }
-      
-      discoveryResource.lastUpdated = now;
-    } else {
-      discoveryResource = {
-        accepts: [paymentRequirements],
-        lastUpdated: now,
-        metadata: {},
-        resource: paymentRequirements.resource,
-        type: 'http',
-        x402Version: 1
-      };
-    }
-    
-    sellerStore.set(sellerKey, discoveryResource);
-    console.log(`[${requestId}] Registered/updated seller: ${paymentRequirements.resource}`);
-  } catch (error) {
-    console.error(`[${requestId}] Failed to register seller:`, error);
-  }
-}
-```
-
-### Step 8: Main Application
-
-Create `src/index.ts` with the server and route handlers. Run:
-```shell
-touch src/index.ts
-```
-
-Add the server and route code:
-```typescript
-import { Hono } from 'hono';
-import { cors } from 'hono/cors';
-import { logger } from 'hono/logger';
-import { serve } from '@hono/node-server';
-import { ethers } from 'ethers';
-import 'dotenv/config';
-
-import type {
-  PaymentRequirements,
-  VerifyResponse,
-  SettleResponse,
-  ListDiscoveryResponse,
-  DiscoveryResource,
-  NonceEntry
-} from './types.js';
-import { NETWORK_CONFIG } from './config/networks.js';
-import { APP_NAME, APP_VERSION, TRANSFER_WITH_AUTHORIZATION_ABI, EIP712_TYPES } from './config/constants.js';
-import { getNetworkConfig, parseSignature, registerSeller } from './utils.js';
-
-const nonceStore = new Map<string, NonceEntry>();
-const sellerStore = new Map<string, DiscoveryResource>();
-
-const app = new Hono();
-
-app.use('*', cors({
-  origin: '*',
-  allowMethods: ['GET', 'POST', 'OPTIONS'],
-  allowHeaders: ['Content-Type', 'X-Request-ID']
-}));
-
-app.use('*', logger());
-
-app.use('*', async (c, next) => {
-  const requestId = c.req.header('X-Request-ID') || crypto.randomUUID();
-  c.set('requestId', requestId);
-  c.header('X-Request-ID', requestId);
-  await next();
-});
-
-app.get('/', (c) => {
-  const networks = Object.keys(NETWORK_CONFIG).map(networkKey => {
-    const config = NETWORK_CONFIG[networkKey];
-    return {
-      id: networkKey,
-      chainId: config.chainId,
-      name: config.name,
-      tokens: config.tokens.map(t => ({
-        address: t.address,
-        name: t.name,
-        forwarder: t.forwarder,
-        forwarderName: t.forwarderName,
-        forwarderVersion: t.forwarderVersion
-      }))
-    };
-  });
-
-  return c.json({
-    name: APP_NAME,
-    version: APP_VERSION,
-    status: 'healthy',
-    endpoints: {
-      verify: '/verify',
-      settle: '/settle',
-      discovery: '/discovery/resources',
-      list: '/list'
-    },
-    networks,
-    schemes: ['exact']
-  });
-});
-
-app.get('/discovery/resources', async (c) => {
-  const requestId = c.get('requestId');
-  
-  try {
-    console.log(`[${requestId}] Processing discovery list request`);
-    
-    const limit = Math.min(parseInt(c.req.query('limit') || '100'), 1000);
-    const offset = parseInt(c.req.query('offset') || '0');
-    
-    const resources: DiscoveryResource[] = [];
-    
-    for (const [key, value] of sellerStore.entries()) {
-      if (key.startsWith('seller:')) {
-        resources.push(value);
+    ```json
+    {
+      "name": "skale-facilitator",
+      "version": "1.0.0",
+      "type": "module",
+      "scripts": {
+        "start": "tsx index.ts",
+        "dev": "tsx watch index.ts",
+        "build": "tsc",
+        "typecheck": "tsc --noEmit"
       }
     }
-    
-    resources.sort((a, b) => 
-      new Date(b.lastUpdated).getTime() - new Date(a.lastUpdated).getTime()
+    ```
+
+    ### Step 2: TypeScript Configuration
+
+    Create `tsconfig.json`:
+
+    ```json
+    {
+      "compilerOptions": {
+        "target": "ES2022",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "lib": ["ES2022"],
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "declaration": true,
+        "declarationMap": true,
+        "sourceMap": true,
+        "outDir": "./dist"
+      },
+      "include": ["*.ts"],
+      "exclude": ["node_modules", "dist"]
+    }
+    ```
+
+    ### Step 3: Environment Configuration
+
+    Create `.env` file in the project root:
+
+    ```bash
+    touch .env
+    ```
+
+    Add the variables:
+
+    ```bash
+    FACILITATOR_SIGNER_PK=your_private_key_here
+    PORT=4022
+    ```
+
+    <Warning>
+    Never commit your private key to version control. Add `.env` to your `.gitignore` file.
+    </Warning>
+
+
+    ### Step 4: Main Application
+
+    Create `facilitator.ts` with the facilitator server:
+
+    ```typescript
+    import { x402Facilitator } from "@x402/core/facilitator";
+    import {
+      PaymentPayload,
+      PaymentRequirements,
+      SettleResponse,
+      VerifyResponse,
+    } from "@x402/core/types";
+    import { toFacilitatorEvmSigner } from "@x402/evm";
+    import { registerExactEvmScheme } from "@x402/evm/exact/facilitator";
+    import dotenv from "dotenv";
+    import express from "express";
+    import { createWalletClient, http, publicActions } from "viem";
+    import { privateKeyToAccount } from "viem/accounts";
+    import { skaleBaseSepoliaTestnet } from "viem/chains";
+
+    dotenv.config();
+
+    const PORT = process.env.PORT || "4022";
+
+    if (!process.env.FACILITATOR_SIGNER_PK) {
+      console.error("FACILITATOR_SIGNER_PK environment variable is required");
+      process.exit(1);
+    }
+
+    const evmAccount = privateKeyToAccount(
+      process.env.FACILITATOR_SIGNER_PK as `0x${string}`
     );
-    
-    const total = resources.length;
-    const paginatedResources = resources.slice(offset, offset + limit);
-    
-    const response: ListDiscoveryResponse = {
-      x402Version: 1,
-      items: paginatedResources,
-      pagination: {
-        limit,
-        offset,
-        total
-      }
-    };
-    
-    return c.json(response);
-    
-  } catch (error: any) {
-    console.error(`[${requestId}] Discovery list error:`, error);
-    return c.json({
-      x402Version: 1,
-      items: [],
-      pagination: { limit: 0, offset: 0, total: 0 }
-    }, 500);
-  }
-});
+    console.info(`EVM Facilitator account: ${evmAccount.address}`);
 
-app.get('/list', async (c) => {
-  const requestId = c.get('requestId');
-  console.log(`[${requestId}] Redirecting /list to /discovery/resources`);
-  
-  const url = new URL(c.req.url);
-  url.pathname = '/discovery/resources';
-  
-  return c.redirect(url.toString());
-});
+    const viemClient = createWalletClient({
+      account: evmAccount,
+      chain: skaleBaseSepoliaTestnet,
+      transport: http(),
+    }).extend(publicActions);
 
-app.post('/verify', async (c) => {
-  const requestId = c.get('requestId');
-  
-  try {
-    const body = await c.req.json();
-    console.log(`[${requestId}] Processing verify request`);
-    
-    const { paymentPayload, paymentRequirements } = body;
-    
-    if (!paymentPayload || !paymentRequirements) {
-      return c.json<VerifyResponse>({
-        isValid: false,
-        invalidReason: 'missing_payload_or_requirements'
+    const evmSigner = toFacilitatorEvmSigner({
+      getCode: (args: { address: `0x${string}` }) => viemClient.getCode(args),
+      address: evmAccount.address,
+      readContract: (args: {
+        address: `0x${string}`;
+        abi: readonly unknown[];
+        functionName: string;
+        args?: readonly unknown[];
+      }) =>
+        viemClient.readContract({
+          ...args,
+          args: args.args || [],
+        }),
+      verifyTypedData: (args: {
+        address: `0x${string}`;
+        domain: Record<string, unknown>;
+        types: Record<string, unknown>;
+        primaryType: string;
+        message: Record<string, unknown>;
+        signature: `0x${string}`;
+      }) => viemClient.verifyTypedData(args as Parameters<typeof viemClient.verifyTypedData>[0]),
+      writeContract: (args: {
+        address: `0x${string}`;
+        abi: readonly unknown[];
+        functionName: string;
+        args: readonly unknown[];
+      }) =>
+        viemClient.writeContract({
+          ...args,
+          args: args.args || [],
+        }),
+      sendTransaction: (args: { to: `0x${string}`; data: `0x${string}` }) =>
+        viemClient.sendTransaction(args),
+      waitForTransactionReceipt: (args: { hash: `0x${string}` }) =>
+        viemClient.waitForTransactionReceipt(args),
+    });
+
+    const facilitator = new x402Facilitator()
+      .onBeforeVerify(async (context) => {
+        console.log("Before verify", context);
+      })
+      .onAfterVerify(async (context) => {
+        console.log("After verify", context);
+      })
+      .onVerifyFailure(async (context) => {
+        console.log("Verify failure", context);
+      })
+      .onBeforeSettle(async (context) => {
+        console.log("Before settle", context);
+      })
+      .onAfterSettle(async (context) => {
+        console.log("After settle", context);
+      })
+      .onSettleFailure(async (context) => {
+        console.log("Settle failure", context);
       });
-    }
-    
-    const payload = paymentPayload.payload;
-    const authorization = payload.authorization;
-    
-    const payloadScheme = paymentPayload.scheme || paymentPayload.accepted?.scheme;
-    if (payloadScheme !== 'exact' || paymentRequirements.scheme !== 'exact') {
-      return c.json<VerifyResponse>({
-        isValid: false,
-        invalidReason: 'unsupported_scheme',
-        payer: authorization.from
-      });
-    }
-    
-    const payloadNetwork = paymentPayload.network || paymentPayload.accepted?.network;
-    const networkConfig = getNetworkConfig(payloadNetwork);
-    
-    if (!networkConfig) {
-      return c.json<VerifyResponse>({
-        isValid: false,
-        invalidReason: 'invalid_network',
-        payer: authorization.from
-      });
-    }
-    
-    const token = networkConfig.tokens.find(
-      t => t.address.toLowerCase() === paymentRequirements.asset.toLowerCase()
-    );
-    
-    if (!token) {
-      return c.json<VerifyResponse>({
-        isValid: false,
-        invalidReason: 'invalid_asset_address',
-        payer: authorization.from
-      });
-    }
-    
-    const name = paymentRequirements.extra?.name || token.name;
-    const version = paymentRequirements.extra?.version || token.forwarderVersion || '2';
-    
-    if (authorization.to.toLowerCase() !== paymentRequirements.payTo.toLowerCase()) {
-      return c.json<VerifyResponse>({
-        isValid: false,
-        invalidReason: 'invalid_exact_evm_payload_recipient_mismatch',
-        payer: authorization.from
-      });
-    }
-    
-    const currentTime = Math.floor(Date.now() / 1000);
-    
-    if (BigInt(authorization.validBefore) < BigInt(currentTime + 6)) {
-      return c.json<VerifyResponse>({
-        isValid: false,
-        invalidReason: 'invalid_exact_evm_payload_authorization_valid_before',
-        payer: authorization.from
-      });
-    }
-    
-    if (BigInt(authorization.validAfter) > BigInt(currentTime)) {
-      return c.json<VerifyResponse>({
-        isValid: false,
-        invalidReason: 'invalid_exact_evm_payload_authorization_valid_after',
-        payer: authorization.from
-      });
-    }
-    
-    const requiredAmount = paymentRequirements.amount || paymentRequirements.maxAmountRequired;
-    if (BigInt(authorization.value) < BigInt(requiredAmount)) {
-      return c.json<VerifyResponse>({
-        isValid: false,
-        invalidReason: 'invalid_exact_evm_payload_authorization_value',
-        payer: authorization.from
-      });
-    }
-    
-    const domain = {
-      name,
-      version,
-      chainId: networkConfig.chainId,
-      verifyingContract: paymentRequirements.asset
-    };
-    
-    const message = {
-      from: authorization.from,
-      to: authorization.to,
-      value: authorization.value,
-      validAfter: authorization.validAfter,
-      validBefore: authorization.validBefore,
-      nonce: authorization.nonce
-    };
-    
-    try {
-      const recoveredAddress = ethers.verifyTypedData(
-        domain,
-        EIP712_TYPES,
-        message,
-        payload.signature
-      );
-      
-      if (recoveredAddress.toLowerCase() !== authorization.from.toLowerCase()) {
-        return c.json<VerifyResponse>({
-          isValid: false,
-          invalidReason: 'invalid_exact_evm_payload_signature',
-          payer: authorization.from
-        });
-      }
-    } catch (e) {
-      console.error(`[${requestId}] Signature verification failed:`, e);
-      return c.json<VerifyResponse>({
-        isValid: false,
-        invalidReason: 'invalid_exact_evm_payload_signature',
-        payer: authorization.from
-      });
-    }
-    
-    const nonceKey = `nonce:${payloadNetwork}:${authorization.nonce}`;
-    const usedNonce = nonceStore.get(nonceKey);
-    
-    if (usedNonce) {
-      return c.json<VerifyResponse>({
-        isValid: false,
-        invalidReason: 'nonce_already_used',
-        payer: authorization.from
-      });
-    }
-    
-    try {
-      const provider = new ethers.JsonRpcProvider(networkConfig.defaultRpc);
-      const contract = new ethers.Contract(
-        paymentRequirements.asset,
-        TRANSFER_WITH_AUTHORIZATION_ABI,
-        provider
-      );
-      
+
+    registerExactEvmScheme(facilitator, {
+      signer: evmSigner,
+      networks: "eip155:324705682",
+      deployERC4337WithEIP6492: true,
+    });
+
+    const app = express();
+    app.use(express.json());
+
+    app.post("/verify", async (req, res) => {
       try {
-        const balance = await contract.balanceOf(authorization.from);
-        if (balance < BigInt(requiredAmount)) {
-          return c.json<VerifyResponse>({
-            isValid: false,
-            invalidReason: 'insufficient_funds',
-            payer: authorization.from
+        const { paymentPayload, paymentRequirements } = req.body as {
+          paymentPayload: PaymentPayload;
+          paymentRequirements: PaymentRequirements;
+        };
+
+        if (!paymentPayload || !paymentRequirements) {
+          return res.status(400).json({
+            error: "Missing paymentPayload or paymentRequirements",
           });
         }
-      } catch (e) {
-        console.log(`[${requestId}] Balance check failed (non-critical)`);
-      }
-      
-      try {
-        const authState = await contract.authorizationState(
-          authorization.from,
-          authorization.nonce
-        );
-        
-        if (authState) {
-          return c.json<VerifyResponse>({
-            isValid: false,
-            invalidReason: 'authorization_already_used',
-            payer: authorization.from
-          });
-        }
-      } catch (e) {
-        console.log(`[${requestId}] Authorization state check failed (non-critical)`);
-      }
-    } catch (e) {
-      console.log(`[${requestId}] RPC validation skipped`);
-    }
-    
-    registerSeller(paymentRequirements, payloadNetwork, requestId, sellerStore);
-    
-    return c.json<VerifyResponse>({
-      isValid: true,
-      payer: authorization.from
-    });
-    
-  } catch (error: any) {
-    console.error(`[${requestId}] Verification error:`, error);
-    return c.json<VerifyResponse>({
-      isValid: false,
-      invalidReason: 'internal_error'
-    }, 500);
-  }
-});
 
-app.post('/settle', async (c) => {
-  const requestId = c.get('requestId');
-  
-  try {
-    const body = await c.req.json();
-    console.log(`[${requestId}] Processing settle request`);
-    
-    const { paymentPayload, paymentRequirements } = body;
-    
-    if (!paymentPayload || !paymentRequirements) {
-      return c.json<SettleResponse>({
-        success: false,
-        errorReason: 'missing_payload_or_requirements',
-        transaction: '',
-        txHash: null,
-        network: '',
-        networkId: null,
-        payer: ''
-      });
-    }
-    
-    const payload = paymentPayload.payload;
-    const authorization = payload.authorization;
-    const payloadNetwork = paymentPayload.network || paymentPayload.accepted?.network;
-    const networkConfig = getNetworkConfig(payloadNetwork);
-    
-    if (!networkConfig) {
-      return c.json<SettleResponse>({
-        success: false,
-        errorReason: 'invalid_network',
-        transaction: '',
-        txHash: null,
-        network: payloadNetwork || '',
-        networkId: payloadNetwork || null,
-        payer: authorization.from
-      });
-    }
-    
-    const nonceKey = `nonce:${payloadNetwork}:${authorization.nonce}`;
-    const existing = nonceStore.get(nonceKey);
-    
-    if (existing) {
-      return c.json<SettleResponse>({
-        success: false,
-        errorReason: 'nonce_already_used',
-        transaction: '',
-        txHash: null,
-        network: payloadNetwork,
-        networkId: payloadNetwork,
-        payer: authorization.from
-      });
-    }
-    
-    nonceStore.set(nonceKey, {
-      status: 'pending',
-      requestId,
-      timestamp: Date.now()
-    });
-    
-    try {
-      const signerPrivateKey = process.env.FACILITATOR_SIGNER_PK;
-      if (!signerPrivateKey) {
-        throw new Error('FACILITATOR_SIGNER_PK not configured');
-      }
-      
-      const provider = new ethers.JsonRpcProvider(networkConfig.defaultRpc);
-      const signer = new ethers.Wallet(signerPrivateKey, provider);
-      
-      const contract = new ethers.Contract(
-        paymentRequirements.asset,
-        TRANSFER_WITH_AUTHORIZATION_ABI,
-        signer
-      );
-      
-      const parsedSig = parseSignature(payload.signature);
-      let tx;
-      
-      if (parsedSig) {
-        tx = await contract.transferWithAuthorization(
-          authorization.from,
-          authorization.to,
-          authorization.value,
-          authorization.validAfter,
-          authorization.validBefore,
-          authorization.nonce,
-          parsedSig.v,
-          parsedSig.r,
-          parsedSig.s
+        const response: VerifyResponse = await facilitator.verify(
+          paymentPayload,
+          paymentRequirements
         );
-      } else {
-        tx = await contract.transferWithAuthorization(
-          authorization.from,
-          authorization.to,
-          authorization.value,
-          authorization.validAfter,
-          authorization.validBefore,
-          authorization.nonce,
-          payload.signature
-        );
-      }
-      
-      console.log(`[${requestId}] Transaction submitted: ${tx.hash}`);
-      
-      const receipt = await tx.wait(1);
-      
-      if (receipt.status !== 1) {
-        nonceStore.delete(nonceKey);
-        return c.json<SettleResponse>({
-          success: false,
-          errorReason: 'invalid_transaction_state',
-          transaction: tx.hash,
-          txHash: tx.hash,
-          network: payloadNetwork,
-          networkId: payloadNetwork,
-          payer: authorization.from
+
+        res.json(response);
+      } catch (error) {
+        console.error("Verify error:", error);
+        res.status(500).json({
+          error: error instanceof Error ? error.message : "Unknown error",
         });
       }
-      
-      nonceStore.set(nonceKey, {
-        status: 'confirmed',
-        requestId,
-        txHash: tx.hash,
-        blockNumber: receipt.blockNumber,
-        timestamp: Date.now()
-      });
-      
-      registerSeller(paymentRequirements, payloadNetwork, requestId, sellerStore);
-      
-      return c.json<SettleResponse>({
-        success: true,
-        transaction: tx.hash,
-        txHash: tx.hash,
-        network: payloadNetwork,
-        networkId: payloadNetwork,
-        payer: authorization.from
-      });
-      
-    } catch (error: any) {
-      nonceStore.delete(nonceKey);
-      console.error(`[${requestId}] Settlement failed:`, error);
-      
-      return c.json<SettleResponse>({
-        success: false,
-        errorReason: error.message || 'settlement_failed',
-        transaction: '',
-        txHash: null,
-        network: payloadNetwork,
-        networkId: payloadNetwork,
-        payer: authorization.from
-      });
-    }
-    
-  } catch (error: any) {
-    console.error(`[${requestId}] Settlement error:`, error);
-    return c.json<SettleResponse>({
-      success: false,
-      errorReason: 'internal_error',
-      transaction: '',
-      txHash: null,
-      network: '',
-      networkId: null,
-      payer: ''
-    }, 500);
-  }
-});
-
-app.post('/accepts', async (c) => {
-  const requestId = c.get('requestId');
-
-  try {
-    const body = await c.req.json();
-    console.log(`[${requestId}] Processing accepts request`);
-
-    const { x402Version, accepts } = body;
-
-    if (!accepts || !Array.isArray(accepts)) {
-      return c.json({ error: 'missing_accepts_array' }, 400);
-    }
-
-    return c.json({
-      x402Version: x402Version || 1,
-      accepts: accepts.map((req: PaymentRequirements) => ({
-        scheme: req.scheme || 'exact',
-        network: req.network,
-        maxAmountRequired: req.maxAmountRequired,
-        resource: req.resource,
-        description: req.description,
-        mimeType: req.mimeType,
-        payTo: req.payTo,
-        maxTimeoutSeconds: req.maxTimeoutSeconds || 60,
-        asset: req.asset,
-        outputSchema: req.outputSchema,
-        extra: req.extra
-      }))
     });
 
-  } catch (error: any) {
-    console.error(`[${requestId}] Accepts error:`, error);
-    return c.json({ error: 'internal_error' }, 500);
-  }
-});
+    app.post("/settle", async (req, res) => {
+      try {
+        const { paymentPayload, paymentRequirements } = req.body;
 
-app.get('/supported', (c) => {
-  const kinds: Array<{ 
-    x402Version: number; 
-    scheme: string; 
-    network: string;
-    extra?: Record<string, unknown>;
-  }> = [];
-  
-  for (const networkKey of Object.keys(NETWORK_CONFIG)) {
-    const config = NETWORK_CONFIG[networkKey];
-    for (const token of config.tokens) {
-      kinds.push({
-        x402Version: 2,
-        scheme: 'exact',
-        network: `eip155:${config.chainId}`,
-        extra: {
-          name: token.forwarderName || token.name,
-          version: token.forwarderVersion || '1',
+        if (!paymentPayload || !paymentRequirements) {
+          return res.status(400).json({
+            error: "Missing paymentPayload or paymentRequirements",
+          });
+        }
+
+        const response: SettleResponse = await facilitator.settle(
+          paymentPayload as PaymentPayload,
+          paymentRequirements as PaymentRequirements
+        );
+
+        res.json(response);
+      } catch (error) {
+        console.error("Settle error:", error);
+
+        if (
+          error instanceof Error &&
+          error.message.includes("Settlement aborted:")
+        ) {
+          return res.json({
+            success: false,
+            errorReason: error.message.replace("Settlement aborted: ", ""),
+            network: req.body?.paymentPayload?.network || "unknown",
+          } as SettleResponse);
+        }
+
+        res.status(500).json({
+          error: error instanceof Error ? error.message : "Unknown error",
+        });
+      }
+    });
+
+    app.get("/supported", async (req, res) => {
+      try {
+        const response = facilitator.getSupported();
+        res.json(response);
+      } catch (error) {
+        console.error("Supported error:", error);
+        res.status(500).json({
+          error: error instanceof Error ? error.message : "Unknown error",
+        });
+      }
+    });
+
+    app.listen(parseInt(PORT), () => {
+      console.log(`Facilitator listening on port ${PORT}`);
+    });
+    ```
+
+    ---
+
+    ## Running the Facilitator
+
+    Start the development server:
+
+    ```bash
+    pnpm dev
+    ```
+
+    Your facilitator will be available at `http://localhost:4022`.
+
+    ---
+
+    ## API Endpoints
+
+    ### GET /supported
+
+    Returns supported payment schemes and networks.
+
+    **Response:**
+
+    ```json
+    {
+      "kinds": [
+        {
+          "x402Version": 2,
+          "scheme": "exact",
+          "network": "eip155:324705682"
+        }
+      ],
+      "extensions": [],
+      "signers": {
+        "eip155": ["0x..."]
+      }
+    }
+    ```
+
+    ### POST /verify
+
+    Validates payment authorization without on-chain settlement.
+
+    **Request:**
+
+    ```json
+    {
+      "paymentPayload": {
+        "x402Version": 2,
+        "resource": {
+          "url": "http://localhost:4021/weather",
+          "description": "Weather data",
+          "mimeType": "application/json"
         },
-      });
-    }
-  }
-  
-  return c.json({ kinds });
-});
-
-const port = parseInt(process.env.PORT || '3500');
-
-console.log(`Starting server on port ${port}...`);
-
-serve({
-  fetch: app.fetch,
-  port
-});
-
-console.log(`Server running at http://localhost:${port}`);
-```
-
----
-
-## Running the Facilitator
-
-Start the development server:
-
-```bash
-npm run dev
-```
-
-Or for production:
-
-```bash
-npm start
-```
-
-Your facilitator will be available at `http://localhost:3500`.
-
----
-
-## API Endpoints
-
-### GET /
-
-Health check and capabilities endpoint.
-
-**Response:**
-
-```json
-{
-  "name": "x402 Facilitator",
-  "version": "1.0.0",
-  "status": "healthy",
-  "endpoints": {
-    "verify": "/verify",
-    "settle": "/settle",
-    "discovery": "/discovery/resources",
-    "list": "/list"
-  },
-  "networks": [...],
-  "schemes": ["exact"]
-}
-```
-
-### POST /verify
-
-Validates payment authorization without on-chain settlement.
-
-**Request:**
-
-```json
-{
-  "paymentPayload": {
-    "payload": {
-      "authorization": {
-        "from": "0x...",
-        "to": "0x...",
-        "value": "1000000",
-        "validAfter": "0",
-        "validBefore": "1234567890",
-        "nonce": "0x..."
+        "accepted": {
+          "scheme": "exact",
+          "network": "eip155:324705682",
+          "asset": "0x61a26022927096f444994dA1e53F0FD9487EAfcf",
+          "amount": "1000",
+          "payTo": "0x...",
+          "maxTimeoutSeconds": 300,
+          "extra": {
+            "name": "Axios USD",
+            "version": "1"
+          }
+        },
+        "payload": {
+          "signature": "0x...",
+          "authorization": {}
+        }
       },
-      "signature": "0x..."
-    },
-    "accepted": {
-      "scheme": "exact",
+      "paymentRequirements": {
+        "scheme": "exact",
+        "network": "eip155:324705682",
+        "asset": "0x61a26022927096f444994dA1e53F0FD9487EAfcf",
+        "amount": "1000",
+        "payTo": "0x...",
+        "maxTimeoutSeconds": 300,
+        "extra": {
+          "name": "Axios USD",
+          "version": "1"
+        }
+      }
+    }
+    ```
+
+    **Response (success):**
+
+    ```json
+    {
+      "isValid": true,
+      "payer": "0x..."
+    }
+    ```
+
+    **Response (failure):**
+
+    ```json
+    {
+      "isValid": false,
+      "invalidReason": "invalid_signature"
+    }
+    ```
+
+    ### POST /settle
+
+    Settles a verified payment by broadcasting the transaction on-chain.
+
+    Request body is identical to `/verify`.
+
+    **Response (success):**
+
+    ```json
+    {
+      "success": true,
+      "transaction": "0x...",
+      "network": "eip155:324705682",
+      "payer": "0x..."
+    }
+    ```
+
+    **Response (failure):**
+
+    ```json
+    {
+      "success": false,
+      "errorReason": "insufficient_balance",
+      "transaction": "",
       "network": "eip155:324705682"
     }
-  },
-  "paymentRequirements": {
-    "scheme": "exact",
-    "network": "eip155:324705682",
-    "asset": "0x61a26022927096f444994dA1e53F0FD9487EAfcf",
-    "payTo": "0x...",
-    "maxAmountRequired": "1000000"
-  }
-}
-```
+    ```
 
-**Response:**
+    ---
 
-```json
-{
-  "isValid": true,
-  "payer": "0x..."
-}
-```
+    ## Lifecycle Hooks
 
-### POST /settle
+    The facilitator supports lifecycle hooks for custom logic:
 
-Executes on-chain payment settlement using ERC-3009 `TransferWithAuthorization`.
-
-**Response:**
-
-```json
-{
-  "success": true,
-  "transaction": "0x...",
-  "txHash": "0x...",
-  "network": "eip155:324705682",
-  "networkId": "eip155:324705682",
-  "payer": "0x..."
-}
-```
-
-### GET /supported
-
-Returns supported payment schemes and networks.
-
-**Response:**
-
-```json
-{
-  "kinds": [
-    {
-      "x402Version": 2,
-      "scheme": "exact",
-      "network": "eip155:324705682",
-      "extra": {
-        "name": "Axios USD",
-        "version": "1"
-      }
-    }
-  ]
-}
-```
-
-### GET /discovery/resources
-
-Lists all registered x402-compatible services with pagination.
-
-**Query Parameters:**
-- `limit`: Maximum results (default: 100, max: 1000)
-- `offset`: Pagination offset (default: 0)
+    ```typescript
+    const facilitator = new x402Facilitator()
+      .onBeforeVerify(async (context) => {
+        // Log or validate before verification
+      })
+      .onAfterVerify(async (context) => {
+        // Track verified payments
+      })
+      .onVerifyFailure(async (context) => {
+        // Handle verification failures
+      })
+      .onBeforeSettle(async (context) => {
+        // Validate before settlement
+        // Return { abort: true, reason: "..." } to cancel
+      })
+      .onAfterSettle(async (context) => {
+        // Track successful settlements
+      })
+      .onSettleFailure(async (context) => {
+        // Handle settlement failures
+      });
+    ```
+    </Tab>
+</Tabs>
 
 ---
 
